# slim2Diretta

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  install.sh  slim2diretta.default  slim2diretta.service  slim2diretta@.service  start-slim2diretta.sh
diretta/: DirettaSync.cpp  DirettaSync.h  globals.cpp  globals.h
scripts/: release.sh
src/: Config.h  FfmpegDecoder.cpp  FfmpegDecoder.h  HttpStreamClient.cpp  main.cpp
webui/: diretta_webui.py  slim2diretta-webui.service
webui/profiles/: slim2diretta.json  slim2diretta_minimal.json
